// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pipeline e2e complex-types fixture generates expected types: global 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually

import type { IpcApi } from "./ipc.types";

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;

exports[`pipeline e2e complex-types fixture generates expected types: runtime 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually

export type AnotherType = {
    key: boolean;
    key2: string;
};

export type ComplexInput = {
    nested: {
        [k: string]: number;
    };
    another: AnotherType;
};

export interface IpcApi {
    types: {
      test(input: ComplexInput): Promise<boolean>;
    };
}
"
`;

exports[`pipeline e2e nest-module fixture generates expected types: global 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually

import type { IpcApi } from "./ipc.types";

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;

exports[`pipeline e2e nest-module fixture generates expected types: runtime 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually



export interface IpcApi {
    counter: {
      getCount(): Promise<number>;
      inc(amount?: number): Promise<number>;
      reset(): void;
    };
}
"
`;

exports[`pipeline e2e simple fixture generates expected types: global 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually

import type { IpcApi } from "./ipc.types";

declare global {
  interface Window {
    ipc: IpcApi;
  }
}

export {};
"
`;

exports[`pipeline e2e simple fixture generates expected types: runtime 1`] = `
"// Auto-generated by @electron-ipc-bridge/vite-plugin
// Do not edit manually



export interface IpcApi {
    counter: {
      getCount(): Promise<number>;
      inc(amount?: number): Promise<number>;
      reset(): void;
      noReturnType(): Promise<number>;
    };
}
"
`;
